Fixing alignment in team members

--- a/src/css/team.sass
+++ b/src/css/team.sass
@@ -5,11 +5,14 @@
 		+span-columns(3.9)
 		align-content: center
 		text-align: center
-		min-height: 120px
+		min-height: 250px
 		
 		@media screen and (max-width: 760px)
 			+span-columns(5.8)
 		
+		@media screen and (max-width: 320px)
+			+span-columns(11.8)
+
 		a
 			font-size: 16px
 			margin-top: 15px
